still working on food api

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 				<!-- End Carousel -->
 			</div>
 		</section>
+		<div class="btn_wrapper">
+			<button id="start">
+				Start
+			</button>
+			<img src="" alt="" class="icon" />
+		</div>
 
 		<script src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/js/bulma-carousel.min.js"></script>
 		<script>
@@ -41,5 +47,6 @@
 			slidesToShow: 4
 		});
 		</script>
+		<script src="assets/js/script.js"></script>
 	</body>
 </html>
