--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Date Night</title>
-        <link rel="stylesheet" href="/assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/css/bulma-carousel.min.css">
 	</head>
@@ -15,19 +15,27 @@
 				<div id="carousel-demo" class="carousel">
 					<div class="item-1">
 						<!-- Slide Content -->
-                        <img src="/assets/images/date2.jpeg" alt="Cooking Couple">
+                        <img src="assets/images/date1.jpeg" alt="Dinner Table"/>
 					</div>
 					<div class="item-2">
 						<!-- Slide Content -->
-                        <img src="/assets/images/date5.jpeg" alt="Cooking Couple">
+                        <img src="assets/images/date2.jpeg" alt="Cooking Couple"/>
 					</div>
 					<div class="item-3">
 						<!-- Slide Content -->
-                        <img src="/assets/images/date3.jpeg" alt="Finished Food">
+                        <img src="assets/images/date3.jpeg" alt="Finished Food"/>
 					</div>
 					<div class="item-4">
 						<!-- Slide Content -->
-                        <img src="/assets/images/date5.jpeg" alt="Movie Fort">
+                        <img src="assets\images\date4.jpeg" alt="Movie Projector"/>
+					</div>
+					<div class="item-5">
+						<!-- Slide Content -->
+                        <img src="assets/images/date5.jpeg" alt="Movie Fort"/>
+					</div>
+					<div class="item-6">
+						<!-- Slide Content -->
+                        <img src="assets/images/date 6.jpeg" alt="Movie Theater"/>
 					</div>
 				</div>
 				<!-- End Carousel -->
@@ -44,7 +52,7 @@
 		<script>
 		bulmaCarousel.attach('#carousel-demo', {
 			slidesToScroll: 1,
-			slidesToShow: 4
+			slidesToShow: 1
 		});
 		</script>
 		<script src="assets/js/script.js"></script>
