--- a/index.html
+++ b/index.html
@@ -21,27 +21,45 @@
 				<div id="carousel-demo" class="carousel">
 					<div class="item-1">
 						<!-- Slide Content -->
-                        <img src="assets/images/date1.jpeg" alt="Dinner Table"/>
+						<figure class="image is-1152x648">
+                        <img src="assets/images/date1.jpg" alt="Dinner Table"/>
+					</figure>
 					</div>
 					<div class="item-2">
 						<!-- Slide Content -->
-                        <img src="assets/images/date2.jpeg" alt="Cooking Couple"/>
+						<figure class="image is-1152x648">
+                        <img src="assets/images/date2.jpg" alt="Cooking Couple"/>
+					</figure>
 					</div>
 					<div class="item-3">
 						<!-- Slide Content -->
-                        <img src="assets/images/date3.jpeg" alt="Finished Food"/>
+						<figure class="image is-1152x648">
+                        <img src="assets/images/date3.jpg" alt="Finished Food"/>
+					</figure>
 					</div>
 					<div class="item-4">
 						<!-- Slide Content -->
-                        <img src="assets\images\date4.jpeg" alt="Movie Projector"/>
+                        <img src="assets\images\date4.webp" alt="Movie Projector"/>
 					</div>
 					<div class="item-5">
 						<!-- Slide Content -->
-                        <img src="assets/images/date5.jpeg" alt="Movie Fort"/>
+                        <img src="assets/images/date5.jpg" alt="Movie Fort"/>
 					</div>
 					<div class="item-6">
 						<!-- Slide Content -->
-                        <img src="assets/images/date 6.jpeg" alt="Movie Theater"/>
+                        <img src="assets/images/date6.jpg" alt="Movie Theater"/>
+					</div>
+					<div class="item-7">
+						<!-- Slide Content -->
+						<figure class="image is-1152x648">
+                        <img src="assets/images/date7.jpg" alt="Movie Theater"/>
+					</figure>
+					</div>
+					<div class="item-8">
+						<!-- Slide Content -->
+						<figure class="image is-1152x648">
+                        <img src="assets/images/date8.jpg" alt="Movie Theater"/>
+					</figure>
 					</div>
 				</div>
 				<!-- End Carousel -->
@@ -64,7 +82,22 @@
 		<script>
 		bulmaCarousel.attach('#carousel-demo', {
 			slidesToScroll: 1,
-			slidesToShow: 1
+			slidesToShow: 1,
+			infinite: true,
+			autoplay: true,
+			pauseOnHover: true,
+			breakpoints: 
+			[{
+				changePoint: 640,
+				slidesToShow: 1,
+				slidesToScroll: 1
+			},{
+				changePoint: 640,
+				slidesToShow: 1,
+				slidesToScroll: 1
+			},{ changePoint: 768, 
+				slidesToShow: 1, 
+				slidesToScroll: 1} ]
 		});
 		</script>
 		<script src="assets/js/script.js"></script>
