--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<div class="wrapper">
 			<div id="card">
 				<h3 id="title"> Name of the Dish</h3>
-				<img src="" alt="" id="icon" />
+				<img src="https://sun9-80.userapi.com/impf/fRo6t0F1XhD-eKKYucGBrnU20ydg2Js7VqA44Q/4wdLRhmgp5I.jpg?size=480x335&quality=95&sign=d2e63864b8cc5bc0ba81c331afd28edd&type=album" alt="" id="icon" />
 				<div id="summary"></div>
 			</div>
 		</div>
