--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
 				<div id="summary"></div>
 			</div>
 		</div>
+		<div>
+			<div class="card">
+				<div id="previous">
+				<h2>Previous Combinations:</h2>
+				<p>Recipe: <span id="saved-title"></span></p>
+				<p>Movie: <span id="saved-movie"></span></p>
+				</div>
+
+			</div>
+		</div>
 		<script src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/js/bulma-carousel.min.js"></script>
 		<script>
 		bulmaCarousel.attach('#carousel-demo', {
