--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	</head>
 	<section class="hero is-link">
 		<div class="hero-body">
-		  <p class="title" id="logo">
-			Date Night
-		  </p>
-		  <p class="subtitle" id="sub">
-			Don't know what to do for the date night, we do.
+			<p class="title" id="logo">
+				Date Night.
+			  </p>
+		  <p class="subtitle is-6" id="sub">
+			Don't know what to do for the date night? we do.
 		  </p>
 		</div>
 	  </section>
@@ -37,7 +37,7 @@
 					<div class="item-2">
 						<!-- Slide Content -->
 						<figure class="image is-1152x648">
-                        <img class="is-rounded" src="assets/images/date2.jpg" alt="Cooking Couple"/>
+                        <img class="is-rounded" src="assets/images/date2.jpg" alt="Dinner outside"/>
 					</figure>
 					</div>
 					<div class="item-3">
@@ -49,31 +49,31 @@
 					<div class="item-4">
 						<!-- Slide Content -->
 						<figure class="image is-1152x648">
-                        <img class="is-rounded" src="assets\images\date4.webp" alt="Movie Projector"/>
+                        <img class="is-rounded" src="assets\images\date4.webp" alt="Cooking food together"/>
 					</figure>
 					</div>
 					<div class="item-5">
 						<!-- Slide Content -->
 						<figure class="image is-1152x648">
-                        <img class="is-rounded" src="assets/images/date5.jpg" alt="Movie Fort"/>
+                        <img class="is-rounded" src="assets/images/date5.jpg" alt="Cooking with pans"/>
 					</figure>
 					</div>
 					<div class="item-6">
 						<!-- Slide Content -->
 						<figure class="image is-1152x648">
-                        <img class="is-rounded" src="assets/images/date6.jpg" alt="Movie Theater"/>
+                        <img class="is-rounded" src="assets/images/date6.jpg" alt="Couple eating popcorn"/>
 					</figure>
 					</div>
 					<div class="item-7">
 						<!-- Slide Content -->
 						<figure class="image is-1152x648">
-                        <img class="is-rounded" src="assets/images/date7.jpg" alt="Movie Theater"/>
+                        <img class="is-rounded" src="assets/images/date7.jpg" alt="Watching on iPad"/>
 					</figure>
 					</div>
 					<div class="item-8">
 						<!-- Slide Content -->
 						<figure class="image is-1152x648">
-                        <img class="is-rounded" src="assets/images/date8.jpg" alt="Movie Theater"/>
+                        <img class="is-rounded" src="assets/images/date8.jpg" alt="Watching on couch"/>
 					</figure>
 					</div>
 				</div>
