previous card looks like other cards

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 			</div>
 		</div>
 		<div>
-			<div class="card">
-				<div id="previous">
+			<div class="wrapper">
+				<div id="card">
 				<h2>Previous Combinations:</h2>
 				<p>Recipe: <span id="saved-title"></span></p>
 				<p>Movie: <span id="saved-movie"></span></p>
