added genre year and plot to the movie card

--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@
 
 			<div id="mCard">
 				<h3 id="movieTitle"> Name of the Movie</h3>
-				<img src="https://sun9-56.userapi.com/impf/62T_sdYwvDoVLVfjtPQfrWZtDS6I3NDSRyqxZg/h4gV5hFcG7g.jpg?size=480x336&quality=95&sign=214f2957c5b6ac64893c9872c0d1bf20&type=album" alt="" id="iconM" />
-				<div id="summary"></div>
+				<img src="https://sun9-32.userapi.com/impf/-_Ddi1H_FPxSQNonHrYatWGG5n15hoexNSZXmQ/4H95hR4i4Wc.jpg?size=480x335&quality=95&sign=259e4739b9ebd8fe7472df1334cd58bd&type=album" alt="" id="iconM" />
+				<div id="genre"></div>
+				<div id="year"></div>
+				<div id="plot"></div>
 			</div>
-
 		</div>	
 		<script src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/js/bulma-carousel.min.js"></script>
 		<script>
