text change after it's clicked

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		<div class="btn_wrapper">
 			<!-- start button -->
 			<button class="button is-rounded" id="start">
-				Generate
+				Click for Combo!
 			</button>
 		</div>
 		<div class="wrapper">
