--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Charmonman:wght@700&family=Neonderthaw&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="assets/css/style.css">
+		<link rel="stylesheet" href="assets/css/loader.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/css/bulma-carousel.min.css">
 	</head>
@@ -115,6 +116,11 @@
 		<div class="wrapper">
 			<div id="card">
 				<h3 id="movieTitle"> Name of the Movie</h3>
+				<main class="loaderContainer" id="hideLoader">
+					<div class="item">
+						<i class="loader" id="lStyle"></i>
+					</div>
+				</main>
 				<img src="assets/images/iconmonstr-video-camera-11.svg" alt="" id="iconM"  />
 				<div id="genre"></div>
 				<div id="year"></div>
