--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Charmonman:wght@700&family=Neonderthaw&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="assets/css/style.css">
 		<link rel="stylesheet" href="assets/css/loader.css">
+        <link rel="stylesheet" href="assets/css/style.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/css/bulma-carousel.min.css">
 	</head>
@@ -118,7 +118,7 @@
 				<h3 id="movieTitle"> Name of the Movie</h3>
 				<main class="loaderContainer" id="hideLoader">
 					<div class="item">
-						<i class="loader" id="lStyle"></i>
+						<i class="cssLoader --2" id="lStyle"></i>
 					</div>
 				</main>
 				<img src="assets/images/iconmonstr-video-camera-11.svg" alt="" id="iconM"  />
